# Multithreaded-Chat-Server

./: .gitignore  CMakeLists.txt  run.c  server
docs/: DESIGN.md
include/: client.h  logger.h  server.h  utils.h
src/: client.c  logger.c  main.c  server.c  utils.c
